add local/colab scripts

--- a/colab/basnet.ipynb
+++ b/colab/basnet.ipynb
@@ -14,12 +14,7 @@
       "source": [
         "%cd /content/\n",
         "!git clone https://github.com/rlmp89/ar_cutpaste_runwayml.git\n",
-        "\n",
-        "%cd /content/ar_cutpaste_runwayml/server\n",
-        "!git clone https://github.com/NathanUA/BASNet.git\n",
-        "!mkdir -p BASNet/saved_models/basnet_bsi\n",
-        "!cp /content/drive/My\\ Drive/basnet.pth BASNet/saved_models/basnet_bsi/basnet.pth\n",
-        "!pip install -r requirements.txt"
+        "! ./scripts/colab.sh"
       ],
       "execution_count": null,
       "outputs": []
